add skills section

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                   <div class="home__blob grid">
                     <div class="home__perfil">
-                      <img src="assets/img/profile_photo.png" alt="home profile photo">
+                      <img src="assets/img/profile.png" alt="home profile photo">
                     </div>
 
                     <img src="assets/img/shape-wawes.svg" alt="" class="home__shape-wawes">
@@ -169,7 +169,110 @@
 
             <!--==================== SKILLS ====================-->
             <section class="skills section" id="skills">
+              <h2 class="section__title">Skills</h2>
+              <span class="section__subtitle">My favorite skills</span>
 
+              <div class="skills__container container grid section__border">
+                <!--==================== SKILLS 1 ====================-->
+                <div class="skills__content">
+                  <h3 class="skills__title">
+                    <i class="ri-braces-line"></i> Frontend
+                  </h3>
+
+                  <div class="skills__info">
+                    <div class="skills__data">
+                      <div class="skills__blob">
+                        <img src="assets/img/html-1.svg" alt="skills image">
+                      </div>
+
+                      <h3 class="skills__name">HTML</h3>
+                      <span class="skills__subtitle">Intermediate</span>
+                    </div>
+
+                    <div class="skills__data">
+                      <div class="skills__blob">
+                        <img src="assets/img/css-3.svg" alt="skills image">
+                      </div>
+
+                      <h3 class="skills__name">CSS</h3>
+                      <span class="skills__subtitle">Intermediate</span>
+                    </div>
+
+                    <div class="skills__data">
+                      <div class="skills__blob">
+                        <img src="assets/img/logo-javascript.svg" alt="skills image">
+                      </div>
+
+                      <h3 class="skills__name">JavaScript</h3>
+                      <span class="skills__subtitle">Basic</span>
+                    </div>
+                  </div>
+                </div>
+
+                <!--==================== SKILLS 2 ====================-->
+                <div class="skills__content">
+                  <h3 class="skills__title">
+                    <i class="ri-pantone-line"></i> Backend
+                  </h3>
+
+                  <div class="skills__info">
+                    <div class="skills__data">
+                      <div class="skills__blob">
+                        <img src="assets/img/ruby.svg" alt="skills image">
+                      </div>
+
+                      <h3 class="skills__name">Ruby</h3>
+                      <span class="skills__subtitle">Intermediate</span>
+                    </div>
+
+                    <div class="skills__data">
+                      <div class="skills__blob">
+                        <img src="assets/img/rails-1.svg" alt="skills image">
+                      </div>
+
+                      <h3 class="skills__name">Rails</h3>
+                      <span class="skills__subtitle">Intermediate</span>
+                    </div>
+                  </div>
+                </div>
+
+                <!--==================== SKILLS 3 ====================-->
+                <div class="skills__content">
+                  <h3 class="skills__title">
+                    <i class="ri-pencil-ruler-2-line"></i> Tools
+                  </h3>
+
+                  <div class="skills__info">
+                    <div class="skills__data">
+                      <div class="skills__blob">
+                        <img src="assets/img/postgresql.svg" alt="skills image">
+                      </div>
+
+                      <h3 class="skills__name">PostgreSQL</h3>
+                      <span class="skills__subtitle">Basic</span>
+                    </div>
+
+                    <div class="skills__data">
+                      <div class="skills__blob">
+                        <img src="assets/img/git-icon.svg" alt="skills image">
+                      </div>
+
+                      <h3 class="skills__name">Git</h3>
+                      <span class="skills__subtitle">Intermediate</span>
+                    </div>
+
+                    <div class="skills__data">
+                      <div class="skills__blob">
+                        <img src="assets/img/figma-1.svg" alt="skills image">
+                      </div>
+
+                      <h3 class="skills__name">Figma</h3>
+                      <span class="skills__subtitle">Intermediate</span>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
             </section>
 
             <!--==================== QUALIFICATION ====================-->
