finish qulification sector

--- a/index.html
+++ b/index.html
@@ -277,7 +277,77 @@
 
             <!--==================== QUALIFICATION ====================-->
             <section class="qualification section" id="qualification">
+              <h2 class="section__title">Qualification</h2>
+              <span class="section__subtitle">Experience & Education</span>
 
+              <div class="qualification__container container grid section__border">
+                <!--==================== QUALIFICATION 1 ====================-->
+                <div class="qualification__content">
+                  <h3 class="qualification__title">
+                    <i class="ri-pencil-ruler-2-line"></i> Education
+                  </h3>
+
+                  <div class="qualification__info">
+                    <div>
+                      <h3 class="qualification__name">
+                        Fullstack Web Development
+                      </h3>
+                      <span class="qualification__country">Le Wagon Coding Bootcamp | Bali</span>
+                      <span class="qualification__year">2022 April - June</span>
+                    </div>
+
+                    <div>
+                      <h3 class="qualification__name">
+                        Exchange Student
+                      </h3>
+                      <span class="qualification__country">Université Paris-Est Marne-la-Vallée | Paris</span>
+                      <span class="qualification__year">2014 -2015</span>
+                    </div>
+
+                    <div>
+                      <h3 class="qualification__name">
+                        Bachelor of Art Management
+                      </h3>
+                      <span class="qualification__country">National Taipei University of Education | Taipei</span>
+                      <span class="qualification__year">2011 - 2015</span>
+                    </div>
+                  </div>
+                </div>
+
+                <!--==================== QUALIFICATION 2 ====================-->
+                <div class="qualification__content">
+                  <h3 class="qualification__title">
+                    <i class="ri-building-line"></i> Work
+                  </h3>
+
+                  <div class="qualification__info">
+                    <div>
+                      <h3 class="qualification__name">
+                        Blockchain Content Editor
+                      </h3>
+                       <span class="qualification__country">Kikitrade | Hong Kong (Remote)</span>
+                      <span class="qualification__year">2021 - 2022</span>
+                    </div>
+
+                    <div>
+                      <h3 class="qualification__name">
+                        Blockchain News Editor & Junior Analyst
+                      </h3>
+                      <span class="qualification__country">Blocktempo | Taipei</span>
+                      <span class="qualification__year">2020 - 2021</span>
+                    </div>
+
+                    <div>
+                      <h3 class="qualification__name">
+                        Project Manager
+                      </h3>
+                      <span class="qualification__country">Motif Art Consulting | Taipei</span>
+                      <span class="qualification__year">2016 - 2020</span>
+                    </div>
+                  </div>
+                </div>
+                <img src="assets/img/shape-circle.svg" alt="qualification image" class="qualification__img">
+              </div>
             </section>
 
             <!--==================== SERVICES ====================-->
@@ -287,7 +357,55 @@
 
             <!--==================== PROJECTS ====================-->
             <section class="projects section" id="projects">
+              <h2 class="section__title">Projects</h2>
+              <span class="section__subtitle">Most Recent Works</span>
 
+              <div class="container section__border">
+                <div class="projects__container">
+                  <div>
+                    <!--==================== PROJECTS 1 ====================-->
+                    <div class="projects__content">
+                      <img src="assets/img/project1.jpg" alt="projects image" class="projects__img">
+
+                      <div>
+                        <span class="projects__subtitle">Web</span>
+                        <h1 class="projects__title">Modern Website</h1>
+
+                        <a href="#" class="projects__button">
+                          View demo <i class="ri-arrow-right-line"></i>
+                        </a>
+                      </div>
+                    </div>
+                    <!--==================== PROJECTS 2 ====================-->
+                    <div class="projects__content">
+                      <img src="assets/img/project2.jpg" alt="projects image" class="projects__img">
+
+                      <div>
+                        <span class="projects__subtitle">Web</span>
+                        <h1 class="projects__title">Modern Website</h1>
+
+                        <a href="#" class="projects__button">
+                          View demo <i class="ri-arrow-right-line"></i>
+                        </a>
+                      </div>
+                    </div>
+                    <!--==================== PROJECTS 3 ====================-->
+                    <div class="projects__content">
+                      <img src="assets/img/project3.jpg" alt="projects image" class="projects__img">
+
+                      <div>
+                        <span class="projects__subtitle">Web</span>
+                        <h1 class="projects__title">Modern Website</h1>
+
+                        <a href="#" class="projects__button">
+                          View demo <i class="ri-arrow-right-line"></i>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
             </section>
 
             <!--==================== TESTIMONIAL ====================-->
