--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
         <!--=============== SWIPER CSS ===============-->
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
@@ -361,10 +361,10 @@
               <span class="section__subtitle">Most Recent Works</span>
 
               <div class="container section__border">
-                <div class="projects__container">
-                  <div>
+                <div class="projects__container swiper">
+                  <div class="swiper-wrapper">
                     <!--==================== PROJECTS 1 ====================-->
-                    <div class="projects__content">
+                    <div class="projects__content swiper-slide">
                       <img src="assets/img/project1.jpg" alt="projects image" class="projects__img">
 
                       <div>
@@ -377,7 +377,7 @@
                       </div>
                     </div>
                     <!--==================== PROJECTS 2 ====================-->
-                    <div class="projects__content">
+                    <div class="projects__content swiper-slide">
                       <img src="assets/img/project2.jpg" alt="projects image" class="projects__img">
 
                       <div>
@@ -390,7 +390,7 @@
                       </div>
                     </div>
                     <!--==================== PROJECTS 3 ====================-->
-                    <div class="projects__content">
+                    <div class="projects__content swiper-slide">
                       <img src="assets/img/project3.jpg" alt="projects image" class="projects__img">
 
                       <div>
@@ -403,8 +403,17 @@
                       </div>
                     </div>
                   </div>
-                </div>
 
+                  <!-- Swiper arrows -->
+                  <div class="swiper-button-next">
+                    <i class="ri-arrow-right-s-line"></i>
+                  </div>
+                  <div class="swiper-button-prev">
+                    <i class="ri-arrow-left-s-line"></i>
+                  </div>
+                  <!-- Swiper pagination -->
+                  <div class="swiper-pagination"></div>
+                </div>
               </div>
             </section>
 
@@ -432,7 +441,7 @@
         <script src=""></script>
 
         <!--=============== SWIPER JS ===============-->
-        <script src=""></script>
+        <script src="assets/js/swiper-bundle.min.js"></script>
 
         <!--=============== EMAIL JS ===============-->
 
