--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
+        <!--=============== Bootstrap ===============-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
         <title>Fullstack developer | Claire Lin</title>
     </head>
     <body>
@@ -364,12 +367,21 @@
                 <div class="projects__container swiper">
                   <div class="swiper-wrapper">
                     <!--==================== PROJECTS 1 ====================-->
-                    <div class="projects__content swiper-slide">
-                      <img src="assets/img/project1.jpg" alt="projects image" class="projects__img">
+                    <div class="projects__content swiper-slide flex items-center text-center">
+                      <div>
+                        <img src="assets/img/project1.jpg" alt="projects image" class="projects__img">
+                      </div>
 
                       <div>
-                        <span class="projects__subtitle">Web</span>
-                        <h1 class="projects__title">Modern Website</h1>
+                        <span class="projects__subtitle">Web</span><br>
+                        <h1 class="projects__title">FusioVan</h1>
+                        <text class="projects__stack">
+                          | Ruby on Rails | HTML | CSS | JavasScript | Bootstrap | PostgreSQL |
+                        </text>
+                        <p class="projects__info" >
+                          FusioVan is a provider of custom van design solutions that help
+                          DIY Camper Van builders find the ideal solar electric system for their van.
+                        </p>
 
                         <a href="#" class="projects__button">
                           View demo <i class="ri-arrow-right-line"></i>
@@ -377,12 +389,21 @@
                       </div>
                     </div>
                     <!--==================== PROJECTS 2 ====================-->
-                    <div class="projects__content swiper-slide">
-                      <img src="assets/img/project2.jpg" alt="projects image" class="projects__img">
+                    <div class="projects__content swiper-slide flex items-center text-center">
+                      <div>
+                        <img src="assets/img/project2.jpg" alt="projects image" class="projects__img">
+                      </div>
 
                       <div>
                         <span class="projects__subtitle">Web</span>
-                        <h1 class="projects__title">Modern Website</h1>
+                        <h1 class="projects__title">Vanish</h1>
+                        <text class="projects__stack">
+                          | Ruby on Rails | HTML | CSS | JavasScript | Bootstrap | PostgreSQL |
+                        </text>
+                        <p class="projects__info">
+                          Vanish is a market place to connect local campervan
+                          owner with people and families wanting to rent them.
+                        </p>
 
                         <a href="#" class="projects__button">
                           View demo <i class="ri-arrow-right-line"></i>
@@ -390,12 +411,21 @@
                       </div>
                     </div>
                     <!--==================== PROJECTS 3 ====================-->
-                    <div class="projects__content swiper-slide">
-                      <img src="assets/img/project3.jpg" alt="projects image" class="projects__img">
+                    <div class="projects__content swiper-slide flex items-center text-center">
+                      <div>
+                        <img src="assets/img/project3.jpg" alt="projects image" class="projects__img">
+                      </div>
 
                       <div>
                         <span class="projects__subtitle">Web</span>
-                        <h1 class="projects__title">Modern Website</h1>
+                        <h1 class="projects__title">Movie Watch List</h1>
+                        <text class="projects__stack">
+                          | Ruby on Rails | HTML | CSS | JavasScript | Bootstrap | PostgreSQL | TMDb-API |
+                        </text>
+                        <p class="projects__info">
+                          A movie watchlist web app to save your favorite movies,
+                          add them to your lists and also with your reviews.
+                        </p>
 
                         <a href="#" class="projects__button">
                           View demo <i class="ri-arrow-right-line"></i>
