--- a/index.html
+++ b/index.html
@@ -449,7 +449,45 @@
 
             <!--==================== TESTIMONIAL ====================-->
             <section class="testimonial section">
+              <h2 class="section__title">Testmonial</h2>
+              <span class="section__subtitle">What other people say</span>
 
+              <div class="container section__border">
+                <div class="testimonial__container">
+                  <div>
+                    <!--==================== TESTIMONIAL 1====================-->
+                    <div class="testimonial__content">
+                      <p class="testimonial__description">
+                        “Working with Claire is to give a good
+                        impression, I carry out my project at a good
+                        cost, with excellent quality and attention.
+                        Great service and recommended.”
+                      </p>
+
+                      <div>
+                        <h3 class="testimonial__name">Klay Harris</h3>
+                          <span class="testimonial__subtitle">Project Manager</span>
+
+                      </div>
+                    </div>
+
+                    <!--==================== TESTIMONIAL 2====================-->
+                    <div class="testimonial__content">
+                      <p class="testimonial__description">
+                        “Working with Claire is to give a good
+                        impression, I carry out my project at a good
+                        cost, with excellent quality and attention.
+                        Great service and recommended.”
+                      </p>
+
+                      <div>
+                        <h3 class="testimonial__name">Mary Lens</h3>
+                          <span class="testimonial__subtitle">Product Manager</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </section>
 
             <!--==================== CONTACT ====================-->
