add slides to testimonial

--- a/index.html
+++ b/index.html
@@ -453,10 +453,11 @@
               <span class="section__subtitle">What other people say</span>
 
               <div class="container section__border">
-                <div class="testimonial__container">
+                <div class="testimonial__container swiper">
+                  <div class="swiper-wrapper"></div>
                   <div>
                     <!--==================== TESTIMONIAL 1====================-->
-                    <div class="testimonial__content">
+                    <div class="testimonial__content swiper-slide">
                       <p class="testimonial__description">
                         “Working with Claire is to give a good
                         impression, I carry out my project at a good
@@ -472,7 +473,7 @@
                     </div>
 
                     <!--==================== TESTIMONIAL 2====================-->
-                    <div class="testimonial__content">
+                    <div class="testimonial__content swiper-slide">
                       <p class="testimonial__description">
                         “Working with Claire is to give a good
                         impression, I carry out my project at a good
@@ -488,6 +489,12 @@
                   </div>
                 </div>
               </div>
+
+              <!-- Swiper arrows -->
+              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div>
+
+              <img src="assets/img/shape-wawes.svg" alt="testimonial image" class="testmonial__img">
             </section>
 
             <!--==================== CONTACT ====================-->
