add swiper arrows to testimonial sector

--- a/index.html
+++ b/index.html
@@ -454,8 +454,7 @@
 
               <div class="container section__border">
                 <div class="testimonial__container swiper">
-                  <div class="swiper-wrapper"></div>
-                  <div>
+                  <div class="swiper-wrapper">
                     <!--==================== TESTIMONIAL 1====================-->
                     <div class="testimonial__content swiper-slide">
                       <p class="testimonial__description">
@@ -468,7 +467,6 @@
                       <div>
                         <h3 class="testimonial__name">Klay Harris</h3>
                           <span class="testimonial__subtitle">Project Manager</span>
-
                       </div>
                     </div>
 
@@ -487,12 +485,16 @@
                       </div>
                     </div>
                   </div>
+                  <!-- Swiper arrows -->
+                  <div class="swiper-button-next">
+                    <i class="ri-arrow-right-s-line"></i>
+                  </div>
+                  <div class="swiper-button-prev">
+                    <i class="ri-arrow-left-s-line"></i>
+                  </div>
                 </div>
               </div>
 
-              <!-- Swiper arrows -->
-              <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div>
 
               <img src="assets/img/shape-wawes.svg" alt="testimonial image" class="testmonial__img">
             </section>
