finish contact sector

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                       <span class="contact__data-title">Whatsapp</span>
                       <span class="contact__data-info">+886 933519863</span>
                       <!-- Insert a real number plus country code -->
-                      <a href="https://api.whatsapp.com/send?phone=886933519863&text=Hello, more information!" target="_blank"="contact__button">
+                      <a href="https://api.whatsapp.com/send?phone=886933519863&text=Hello, more information!" target="_blank" class="contact__button">
                         Write me <i class="ri-arrow-right-line"></i>
                       </a>
                     </div>
@@ -544,8 +544,8 @@
                     </div>
 
                     <div class="contact__form-div contact__form-area">
-                      <label class="contact__form-tag">Project</label>
-                      <textarea name="user_project" placeholder="Write your project" id="contact-project" class="contact__form-input"></textarea>
+                      <label class="contact__form-tag">Message</label>
+                      <textarea name="user_project" placeholder="Your message" id="contact-project" class="contact__form-input"></textarea>
                     </div>
 
                     <button type="submit" class="contact__button">
