--- a/index.html
+++ b/index.html
@@ -17,67 +17,67 @@
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <!--=============== Bootstrap ===============-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 
         <title>Fullstack developer | Claire Lin</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
-            <nav class="nav container">
-              <a href="#" class="nav__logo">
-                Claire
-              </a>
+          <nav class="nav container">
+            <a href="#" class="nav__logo">
+              Claire
+            </a>
 
-              <div class="nav__menu" id="nav-menu">
-                <ul class="nav__list grid">
-                  <li class="nav__item">
-                    <a href="#home" class="nav__link">
-                      <i class="ri-home-5-line"></i> Home
-                    </a>
-                  </li>
+            <div class="nav__menu" id="nav-menu">
+              <ul class="nav__list grid">
+                <li class="nav__item">
+                  <a href="#home" class="nav__link">
+                    <i class="ri-home-5-line"></i> Home
+                  </a>
+                </li>
 
-                  <li class="nav__item">
-                    <a href="#skills" class="nav__link">
-                      <i class="ri-trophy-line"></i> Skills
-                    </a>
-                  </li>
+                <li class="nav__item">
+                  <a href="#skills" class="nav__link">
+                    <i class="ri-trophy-line"></i> Skills
+                  </a>
+                </li>
 
-                  <li class="nav__item">
-                    <a href="#qualification" class="nav__link">
-                      <i class="ri-book-open-line"></i> Qualification
-                    </a>
-                  </li>
+                <li class="nav__item">
+                  <a href="#qualification" class="nav__link">
+                    <i class="ri-book-open-line"></i> Qualification
+                  </a>
+                </li>
 
-                  <li class="nav__item">
-                    <a href="#Projects" class="nav__link">
-                      <i class="ri-image-line"></i> Projects
-                    </a>
-                  </li>
+                <li class="nav__item">
+                  <a href="#projects" class="nav__link">
+                    <i class="ri-image-line"></i> Projects
+                  </a>
+                </li>
 
-                  <li class="nav__item">
-                    <a href="#contact" class="nav__link">
-                      <i class="ri-chat-smile-line"></i> Contact Me
-                    </a>
-                  </li>
-                </ul>
+                <li class="nav__item">
+                  <a href="#contact" class="nav__link">
+                    <i class="ri-chat-smile-line"></i> Contact Me
+                  </a>
+                </li>
+              </ul>
 
-                <!-- Close button -->
-                <div class="nav__close" id="nav-close">
-                  <i class="ri-close-circle-line"></i> Close
-                </div>
+              <!-- Close button -->
+              <div class="nav__close" id="nav-close">
+                <i class="ri-close-circle-line"></i> Close
               </div>
+            </div>
 
-              <div class="nav__buttons">
-                <!-- Theme change button -->
-                <i class="ri-moon-line change-theme" id="theme-button"></i>
+            <div class="nav__buttons">
+              <!-- Theme change button -->
+              <i class="ri-moon-line change-theme" id="theme-button"></i>
 
-                <!-- Toggle button -->
-                <div class="nav__toggle" id="nav-toggle">
-                  <i class="ri-menu-4-line"></i>
-                </div>
+              <!-- Toggle button -->
+              <div class="nav__toggle" id="nav-toggle">
+                <i class="ri-menu-4-line"></i>
               </div>
-            </nav>
+            </div>
+          </nav>
         </header>
 
         <!--==================== MAIN ====================-->
@@ -367,7 +367,7 @@
                 <div class="projects__container swiper">
                   <div class="swiper-wrapper">
                     <!--==================== PROJECTS 1 ====================-->
-                    <div class="projects__content swiper-slide flex items-center text-center">
+                    <div class="projects__content swiper-slide">
                       <div>
                         <img src="assets/img/project1.jpg" alt="projects image" class="projects__img">
                       </div>
@@ -389,7 +389,7 @@
                       </div>
                     </div>
                     <!--==================== PROJECTS 2 ====================-->
-                    <div class="projects__content swiper-slide flex items-center text-center">
+                    <div class="projects__content swiper-slide">
                       <div>
                         <img src="assets/img/project2.jpg" alt="projects image" class="projects__img">
                       </div>
@@ -411,7 +411,7 @@
                       </div>
                     </div>
                     <!--==================== PROJECTS 3 ====================-->
-                    <div class="projects__content swiper-slide flex items-center text-center">
+                    <div class="projects__content swiper-slide">
                       <div>
                         <img src="assets/img/project3.jpg" alt="projects image" class="projects__img">
                       </div>
