link emailJS with contact sector

--- a/index.html
+++ b/index.html
@@ -545,8 +545,10 @@
 
                     <div class="contact__form-div contact__form-area">
                       <label class="contact__form-tag">Message</label>
-                      <textarea name="user_project" placeholder="Your message" id="contact-project" class="contact__form-input"></textarea>
+                      <textarea name="user_message" placeholder="Your message" id="contact-message" class="contact__form-input"></textarea>
                     </div>
+
+                    <p class="contact__notice" id="contact-notice"></p>
 
                     <button type="submit" class="contact__button">
                       Send message <i class="ri-arrow-right-up-line"></i>
@@ -573,6 +575,7 @@
         <script src="assets/js/swiper-bundle.min.js"></script>
 
         <!--=============== EMAIL JS ===============-->
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
 
         <!--=============== MAIN JS ===============-->
