--- a/index.html
+++ b/index.html
@@ -561,7 +561,37 @@
 
         <!--==================== FOOTER ====================-->
         <footer class="footer">
+          <div class="footer__container container">
+            <h1 class="footer__title">Claire</h1>
+            <p>Full-Stack Developer</p>
 
+            <ul class="footer__list">
+              <li>
+                <a href="#" class="footer__link">Home</a>
+              </li>
+
+              <li>
+                <a href="#skills" class="footer__link">Skills</a>
+              </li>
+
+              <li>
+                <a href="#projects" class="footer__link">Projects</a>
+              </li>
+            </ul>
+            <ul class="footer__social">
+              <a href="https://www.linkedin.com/in/clairechlin/" target="_blank" class="footer__social-link">
+                <i class="ri-linkedin-box-line"></i>
+              </a>
+
+              <a href="https://github.com/Huiclaire"  target="_blank" class="footer__social-link">
+                <i class="ri-github-line"></i>
+              </a>
+            </ul>
+
+            <span class="footer__copy">
+              &#169; Claire Lin. All rights reserved
+            </span>
+          </div>
         </footer>
 
 
