--- a/index.html
+++ b/index.html
@@ -596,7 +596,9 @@
 
 
         <!--========== SCROLL UP ==========-->
-
+        <a href="#" class="scrollup" id="scroll-up">
+          <i class="ri-arrow-up-line"></i>
+        </a>
 
         <!--=============== SCROLLREVEAL ===============-->
         <script src=""></script>
