set breakpoint for small devices

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
                   <h1 class="home__title">
                     Hi,
                     I'm Claire! <br>
-                    A Full-Stack Software Engineer based in Germany.
+                    Full-Stack Developer
+                    Based in Germany
                   </h1>
 
                   <div class="home__blob grid">
