finish breakpoints for medium devices

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <!--==================== HOME ====================-->
             <section class="home section" id="home">
               <div class="home__container container grid section__border">
-                <div class="home__date grid">
+                <div class="home__data grid">
                   <h1 class="home__title">
                     Hi,
                     I'm Claire! <br>
@@ -120,9 +120,8 @@
                       BIOGRAPHY
                     </h3>
                     <p class="home__info-description">
-                      Hi, I'm Claire. I have recently shifted my career paths from art investments and the crypto field
-                      to becoming a full-stack developer. I am detail-oriented, passionate about coding, and not afraid
-                      of challenges.
+                      Hi, I'm Claire. Full-Stack developer. Passionate about building user-friendly web applications
+                      with sophisticated design.
                     </p>
                   </div>
 
@@ -350,14 +349,14 @@
                     </div>
                   </div>
                 </div>
-                <img src="assets/img/shape-circle.svg" alt="qualification image" class="qualification__img">
+                <!-- <img src="assets/img/shape-circle.svg" alt="qualification image" class="qualification__img"> -->
               </div>
             </section>
 
             <!--==================== SERVICES ====================-->
-            <section class="services section" id="services">
+            <!-- <section class="services section" id="services">
 
-            </section>
+            </section> -->
 
             <!--==================== PROJECTS ====================-->
             <section class="projects section" id="projects">
