set breakpoints for large device

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   <h1 class="home__title">
                     Hi,
                     I'm Claire! <br>
-                    Full-Stack Developer
+                    Full-Stack Developer <br>
                     Based in Germany
                   </h1>
 
