fix swiper button prev of project section

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
                 <!--==================== HOME INFO 2 ====================-->
                 <div class="home__info">
-                  <div>
+                  <!-- <div>
                     <h3 class="home__info-title">
                       YEARS OF EXPERIENCE
                     </h3>
@@ -145,7 +145,7 @@
                     <p class="home__info-number">
                       1
                     </p>
-                  </div>
+                  </div> -->
 
                   <div>
                     <h3 class="home__info-title">
@@ -163,7 +163,7 @@
                     </h3>
 
                     <p class="home__info-number">
-                      06+
+                      03+
                     </p>
                   </div>
                 </div>
