delete projects and testimonial sector & add new projects sector

--- a/index.html
+++ b/index.html
@@ -359,15 +359,15 @@
             </section> -->
 
             <!--==================== PROJECTS ====================-->
-            <section class="projects section" id="projects">
+            <!-- <section class="projects section" id="projects">
               <h2 class="section__title">Projects</h2>
               <span class="section__subtitle">Most Recent Works</span>
 
-              <div class="container section__border">
-                <div class="projects__container swiper">
-                  <div class="swiper-wrapper">
+              <div class="container section__border position-relative">
+                <div class="projects__container swiper ">
+                  <div class="swiper-wrapper"> -->
                     <!--==================== PROJECTS 1 ====================-->
-                    <div class="projects__content swiper-slide">
+                    <!-- <div class="projects__content swiper-slide">
                       <div>
                         <img src="assets/img/project1.jpg" alt="projects image" class="projects__img">
                       </div>
@@ -387,9 +387,9 @@
                           View demo <i class="ri-arrow-right-line"></i>
                         </a>
                       </div>
-                    </div>
+                    </div> -->
                     <!--==================== PROJECTS 2 ====================-->
-                    <div class="projects__content swiper-slide">
+                    <!-- <div class="projects__content swiper-slide">
                       <div>
                         <img src="assets/img/project2.jpg" alt="projects image" class="projects__img">
                       </div>
@@ -409,9 +409,9 @@
                           View demo <i class="ri-arrow-right-line"></i>
                         </a>
                       </div>
-                    </div>
+                    </div> -->
                     <!--==================== PROJECTS 3 ====================-->
-                    <div class="projects__content swiper-slide">
+                    <!-- <div class="projects__content swiper-slide">
                       <div>
                         <img src="assets/img/project3.jpg" alt="projects image" class="projects__img">
                       </div>
@@ -432,8 +432,107 @@
                         </a>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
 
+                  <!-- Swiper arrows -->
+                  <!-- <div class="swiper-button-next position-absolute-next">
+                    <i class="ri-arrow-right-s-line"></i>
+                  </div>
+                  <div class="swiper-button-prev position-absolute-prev">
+                    <i class="ri-arrow-left-s-line"></i>
+                  </div> -->
+                  <!-- Swiper pagination -->
+                  <!-- <div class="swiper-pagination"></div>
+                </div>
+              </div>
+            </section> -->
+
+            <!--==================== NEW PROJECTS ====================-->
+            <section class="testimonial section">
+              <h2 class="section__title">Projects</h2>
+              <span class="section__subtitle">Most Recent Works</span>
+
+              <div class="container section__border">
+                <div class="testimonial__container swiper">
+                  <div class="swiper-wrapper">
+                    <!--==================== NEW PROJECTS 1====================-->
+                    <div class="testimonial__content swiper-slide new__projects_content">
+                      <div>
+                        <img src="assets/img/project1.jpg" alt="projects image" class="projects__img">
+                      </div>
+
+                      <div>
+                        <h3 class="testimonial__name">FusioVan</h3>
+                        <br>
+                      </div>
+
+                      <div>
+                        <span class="testimonial__subtitle">Ruby on Rails, HTML, CSS, JavasScript, Bootstrap, PostgreSQL</span>
+                        <br>
+                        <br>
+                        <p class="testimonial__description">
+                            FusioVan is a provider of custom van design solutions that help
+                            DIY Camper Van builders find the ideal solar electric system for their van.
+                        </p>
+                      </div>
+
+                      <a href="#" class="projects__button">
+                        View demo <i class="ri-arrow-right-line"></i>
+                      </a>
+                    </div>
+
+                    <!--==================== NEW PROJECTS 2 ====================-->
+                    <div class="testimonial__content swiper-slide new__projects_content">
+                      <div>
+                        <img src="assets/img/project2.jpg" alt="projects image" class="projects__img">
+                      </div>
+
+                      <div>
+                        <h3 class="testimonial__name">Vanish</h3>
+                        <br>
+                      </div>
+
+                      <div>
+                        <span class="testimonial__subtitle">Ruby on Rails, HTML, CSS, JavasScript, Bootstrap, PostgreSQL</span>
+                        <br>
+                        <br>
+                        <p class="testimonial__description">
+                          Vanish is a market place to connect local campervan
+                          owner with people and families wanting to rent them.
+                        </p>
+                      </div>
+
+                      <a href="#" class="projects__button">
+                        View demo <i class="ri-arrow-right-line"></i>
+                      </a>
+                    </div>
+
+                    <!--==================== NEW PROJECTS 3 ====================-->
+                    <div class="testimonial__content swiper-slide new__projects_content">
+                      <div>
+                        <img src="assets/img/project3.jpg" alt="projects image" class="projects__img">
+                      </div>
+
+                      <div>
+                        <h3 class="testimonial__name">Movie Watch List</h3>
+                        <br>
+                      </div>
+
+                      <div>
+                        <span class="testimonial__subtitle">Ruby on Rails, HTML, CSS, JavasScript, Bootstrap, PostgreSQL</span>
+                        <br>
+                        <br>
+                        <p class="testimonial__description">
+                          A movie watchlist web app to save your favorite movies,
+                          add them to your lists and also with your reviews.
+                        </p>
+                      </div>
+
+                      <a href="#" class="projects__button">
+                        View demo <i class="ri-arrow-right-line"></i>
+                      </a>
+                    </div>
+                  </div>
                   <!-- Swiper arrows -->
                   <div class="swiper-button-next">
                     <i class="ri-arrow-right-s-line"></i>
@@ -441,22 +540,23 @@
                   <div class="swiper-button-prev">
                     <i class="ri-arrow-left-s-line"></i>
                   </div>
-                  <!-- Swiper pagination -->
-                  <div class="swiper-pagination"></div>
                 </div>
               </div>
+
+
+              <img src="assets/img/shape-wawes.svg" alt="testimonial image" class="testimonial__img">
             </section>
 
             <!--==================== TESTIMONIAL ====================-->
-            <section class="testimonial section">
+            <!-- <section class="testimonial section">
               <h2 class="section__title">Testimonial</h2>
               <span class="section__subtitle">What other people say</span>
 
               <div class="container section__border">
                 <div class="testimonial__container swiper">
                   <div class="swiper-wrapper">
-                    <!--==================== TESTIMONIAL 1====================-->
-                    <div class="testimonial__content swiper-slide">
+                    <! --==================== TESTIMONIAL 1====================-->
+                    <!-- <div class="testimonial__content swiper-slide">
                       <p class="testimonial__description">
                         “Working with Claire is to give a good
                         impression, I carry out my project at a good
@@ -468,10 +568,10 @@
                         <h3 class="testimonial__name">Klay Harris</h3>
                           <span class="testimonial__subtitle">Project Manager</span>
                       </div>
-                    </div>
+                    </div> -->
 
                     <!--==================== TESTIMONIAL 2====================-->
-                    <div class="testimonial__content swiper-slide">
+                    <!-- <div class="testimonial__content swiper-slide">
                       <p class="testimonial__description">
                         “Working with Claire is to give a good
                         impression, I carry out my project at a good
@@ -485,19 +585,19 @@
                       </div>
                     </div>
                   </div>
-                  <!-- Swiper arrows -->
-                  <div class="swiper-button-next">
+                  <!- Swiper arrows -->
+                  <!-- <div class="swiper-button-next">
                     <i class="ri-arrow-right-s-line"></i>
                   </div>
                   <div class="swiper-button-prev">
                     <i class="ri-arrow-left-s-line"></i>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
 
-              <img src="assets/img/shape-wawes.svg" alt="testimonial image" class="testmonial__img">
-            </section>
+              <!-- <img src="assets/img/shape-wawes.svg" alt="testimonial image" class="testmonial__img">
+            </section> -->
 
             <!--==================== CONTACT ====================-->
             <section class="contact section" id="contact">
