add design to new projects sector

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
               <h2 class="section__title">Projects</h2>
               <span class="section__subtitle">Most Recent Works</span>
 
-              <div class="container section__border position-relative">
+              <div class="container section__border">
                 <div class="projects__container swiper ">
                   <div class="swiper-wrapper"> -->
                     <!--==================== PROJECTS 1 ====================-->
@@ -435,10 +435,10 @@
                   </div> -->
 
                   <!-- Swiper arrows -->
-                  <!-- <div class="swiper-button-next position-absolute-next">
+                  <!-- <div class="swiper-button-next">
                     <i class="ri-arrow-right-s-line"></i>
                   </div>
-                  <div class="swiper-button-prev position-absolute-prev">
+                  <div class="swiper-button-prev">
                     <i class="ri-arrow-left-s-line"></i>
                   </div> -->
                   <!-- Swiper pagination -->
