add new home sector

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <!--=============== Bootstrap ===============-->
-        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+        <!--=============== BOXICONS ===============-->
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 
         <title>Fullstack developer | Claire Lin</title>
     </head>
@@ -82,8 +83,58 @@
 
         <!--==================== MAIN ====================-->
         <main class="main">
-            <!--==================== HOME ====================-->
+            <!--==================== NEW HOME ====================-->
             <section class="home section" id="home">
+              <div class="home__container container grid">
+                <div class="home__data grid">
+                  <div class="home__data">
+                    <span class="hone__greeting">Hello, I'm</span>
+                    <h1 class="home__name">Claire Lin</h1>
+                    <h3 class="home__education">Full-Stack Developer <br>
+                    Based in Germany</h3>
+                  </div>
+
+                  <div class="home__blob grid">
+                    <div class="home__perfil">
+                      <img src="assets/img/profile.png" alt="home profile photo" class="home__img">
+                    </div>
+
+                    <!-- <img src="assets/img/shape-wawes.svg" alt="" class="home__shape-wawes">
+                    <img src="assets/img/shape-circle.svg" alt="" class="home__shape-circle"> -->
+                  </div>
+
+                  <div class="home__buttons">
+                    <a download="" href="assets/pdf/Claire Lin-CV.pdf" class="button button--ghost">
+                      Download CV
+                    </a>
+                    <a href="#about" class="button">About me</a>
+                  </div>
+
+                  <ul class="home__social">
+                    <a href="https://www.linkedin.com/in/clairechlin/" target="_blank" class="home__social-link">
+                      <i class="ri-linkedin-box-line"></i>
+                    </a>
+
+                    <a href="https://github.com/Huiclaire" target="_blank" class="home__social-link">
+                      <i class="ri-github-line"></i>
+                    </a>
+                  </ul>
+
+                  <a href="#about" class="home__scroll">
+                    <i class='bx bx-mouse home__scroll-icon'></i>
+                    <span class="home__scroll-name">Scroll Down</span>
+                  </a>
+                </div>
+
+                <!--==================== NEW HOME INFO 1 ====================-->
+
+
+
+              </div>
+            </section>
+
+            <!--==================== HOME ====================-->
+            <!-- <section class="home section" id="home">
               <div class="home__container container grid section__border">
                 <div class="home__data grid">
                   <h1 class="home__title">
@@ -111,10 +162,10 @@
                       <i class="ri-github-line"></i>
                     </a>
                   </ul>
-                </div>
+                </div> -->
 
                 <!--==================== HOME INFO 1 ====================-->
-                <div class="home__info">
+                <!-- <div class="home__info">
                   <div>
                     <h3 class="home__info-title">
                       BIOGRAPHY
@@ -133,10 +184,10 @@
                       chunhuilin7516@gmail.com <br>
                       +49 163 3875554 <br>
                   </div>
-                </div>
+                </div> -->
 
                 <!--==================== HOME INFO 2 ====================-->
-                <div class="home__info">
+                <!-- <div class="home__info"> -->
                   <!-- <div>
                     <h3 class="home__info-title">
                       YEARS OF EXPERIENCE
@@ -147,7 +198,7 @@
                     </p>
                   </div> -->
 
-                  <div>
+                  <!-- <div>
                     <h3 class="home__info-title">
                       COMPLETED PROJECTS
                     </h3>
@@ -168,7 +219,7 @@
                   </div>
                 </div>
               </div>
-            </section>
+            </section> -->
 
             <!--==================== SKILLS ====================-->
             <section class="skills section" id="skills">
