add about sector

--- a/index.html
+++ b/index.html
@@ -125,13 +125,48 @@
                     <span class="home__scroll-name">Scroll Down</span>
                   </a>
                 </div>
-
-                <!--==================== NEW HOME INFO 1 ====================-->
-
-
-
               </div>
             </section>
+
+            <!--==================== About ====================-->
+            <section class="about section" id="about">
+              <h2 class="section__title">About Me</h2>
+              <spen class="section__subtitle">My Intro</spen>
+
+              <div class="about__container container grid">
+                <img src="assets/img/profile.png" alt="" class="about__img">
+
+                <div class="about__data">
+                  <div class="about__info">
+                    <h3 class="about__title"></h3>
+                    <span class="about__subtitle"></span>
+                  </div>
+                </div>
+
+                <p class="about__description">
+                  I am a Berlin-based junior full stack developer from Taiwan.
+                  After four years of experience in art consulting company as a project
+                  manager, then two years of experience in the blockchain industry as a
+                  crypto-journalist, I decided to change my career to become a web
+                  developer and learned to code in a Le Wagon bootcamp. <br>
+                  I now have a solid understanding of and am fully equipped with
+                  all the tools to build modern and responsive web applications.
+                  I like to see this as the first step of a much longer journey and I am
+                  excited to learn new things and onboard new languages on my way. <br>
+                  In my professional life, one thing became clear pretty quickly -
+                  I like to put great attention to detail, and I feel satisfied when the
+                  outcome meets my creativity with also more relationship-drive,
+                  human-centered design.
+                  In my freetime, I enjoy traveling, cycling, surfing, dancing,
+                  and occationally gardening
+                </p>
+
+                <a href="#contact" class="button">Contact Me</a>
+              </div>
+            </section>
+
+
+
 
             <!--==================== HOME ====================-->
             <!-- <section class="home section" id="home">
