--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <spen class="section__subtitle">My Intro</spen>
 
               <div class="about__container container grid">
-                <img src="assets/img/profile.png" alt="" class="about__img">
+                <img src="assets/img/about.png" alt="" class="about__img">
 
                 <div class="about__data">
                   <div class="about__info">
@@ -148,17 +148,17 @@
                   After four years of experience in art consulting company as a project
                   manager, then two years of experience in the blockchain industry as a
                   crypto-journalist, I decided to change my career to become a web
-                  developer and learned to code in a Le Wagon bootcamp. <br>
+                  developer and learned to code in a Le Wagon bootcamp. <br><br>
                   I now have a solid understanding of and am fully equipped with
                   all the tools to build modern and responsive web applications.
                   I like to see this as the first step of a much longer journey and I am
-                  excited to learn new things and onboard new languages on my way. <br>
+                  excited to learn new things and onboard new languages on my way. <br><br>
                   In my professional life, one thing became clear pretty quickly -
                   I like to put great attention to detail, and I feel satisfied when the
                   outcome meets my creativity with also more relationship-drive,
                   human-centered design.
                   In my freetime, I enjoy traveling, cycling, surfing, dancing,
-                  and occationally gardening
+                  and occationally gardening.
                 </p>
 
                 <a href="#contact" class="button">Contact Me</a>
